--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
     "d3": "^5.7.0",
+    "d3-drag": "^1.2.3",
     "ng-zorro-antd": "^1.5.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
